examples/test/testpolicy9477.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9477
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key29: value15
      key44: value16
      key19: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value35
      podSelector:
        matchLabels:
          key28: value20
